# XPalm

./: .Rbuildignore  .Rhistory  .gitignore  Avancement.txt  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.Rmd  README.html  Sample.R  XPalm.pro  XPalm_Sample.R  XPalm_Shiny.R  XPalm_standalone.pro  main.cpp
R/: .RData  .Rhistory  App_Xpalm.R  App_raph.R  RcppExports.R  Report_Visu_debug_XPalm.Rmd  Report_Visu_debug_XPalm.html  Visu_outputs_phyto_Xpalm.R  Visu_outputs_tree_Xpalm.R  Xpalm_functions.R  generate_meteo.R  generate_params.R  load_phyto_data.R  test_formalism.R
RScripts/: App.R  BH_shiny.R  Visu_debug.R  Visu_outputs.R  Visu_outputs_phyto_Xpalm.R  XPalm_Shiny.R  Xpalm_functions.R  Xplam_CIGE.R
RScripts/Data/: Meteo_extract_BDD_PR.txt  Meteo_extract_BDD_SMSE.txt  Meteo_extract_BDD_TOWE.txt
RScripts/sample/: estimation.R
artis_lite/: simplemodel.h  simpletrace.h
parameters/: .Rhistory  Meteo_extract_BDD_SMSE.txt  XPalm_parameters.txt  XPalm_parameters_origin.txt  XPalm_parameters_ref.txt  meteo.txt  meteo_KNDE.txt  meteo_TOWE.txt  meteo_all_PRESCO.txt  meteo_all_TOWE.txt  meteo_mid.txt  meteo_short.txt  meteo_sub_PRESCO.txt  meteo_sub_SMSE.txt  meteo_sub_TOWE.txt  parameters_def.csv  test.csv  variables_def.csv
pyPalm/: Porting.xlsx  Tree.py  XPalm_parameters.txt
pyPalm/Data/: GlobalVariables.py  GlobalVariables_3.py  GlobalVariables_adultes.py  GlobalVariables_jeunes.py
pyPalm/done/: BH.py  Bunch.py  Internode.py  Leaf.py  Meteo.py  Meteo_3.py  Organ.py  Phytomer.py  Racines.py  Reserve.py  Simulation.py  bernouilli.py  fruit.py  male.py  peduncule.py
qtapp/: XPalm.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meteodatamodel.cpp  meteodatamodel.h  parametersdatamodel.cpp  tracemodel.h  view.cpp
src/: Makevars.win  ModelParameters.hpp  RcppExports.cpp  SampleAtomicModel.hpp  defines.hpp  main.cpp  rcpp_xpalm.cpp  sampleatomic.h  xpalm_types.hpp
src/observer/: PhytomerView.hpp  PlantView.hpp
src/plant/: root.h  tree.h
src/plant/deprec/: AssimilationModel.hpp  CulmModel.hpp  CulmStockModel.hpp  CulmStockModelNG.hpp  FemaleInflo.hpp  IctModel.hpp  Inflo.hpp  Spikelet.hpp  (+7 more)
src/qtapp/: mainwindow.cpp  mainwindow.h  mainwindow.ui  parametersdatamodel.h  tracemodel.cpp  tracemodel.h  view.cpp  view.h
src/utils/: ParametersReader.hpp  juliancalculator.h  resultparser.h
(+19 files in other folders)
